--- a/report/TermThreeProject.bib
+++ b/report/TermThreeProject.bib
@@ -14,6 +14,16 @@
     edition       = "Third",
     url           = "https://www.analog.com/media/en/training-seminars/design-handbooks/designers-guide-instrument-amps-complete.pdf"
 }
+@manual{sf:pwm,
+    organization  = "SparkFun",
+    title         = "{Basic Pulse Width Modulation}",
+    author        = "Gerald Recktenwald",
+    year          = 2011,
+    month         = 11,
+    day           = 14,
+    number        = "{EAS 199}",
+    url           = "https://cdn.sparkfun.com/assets/resources/4/4/PWM_output_Arduino.pdf"
+}
 @manual{sf:gettingstarted,
     organization  = "SparkFun",
     title         = "{Getting Started with Load Cells}",
